--- a/Agra/public/app.css
+++ b/Agra/public/app.css
@@ -118,12 +118,21 @@ h3{
     grid-column-end: 8;
 }
 .btn{
+    width: 150px;
+    height: 100px;
     background-color: #6A2EE8;
     color: #FFFFFF;
     border-radius: 10px;
     font-family: Jost, sans-serif;
     font-size: 20px;
     grid-row-start:4 ;
+    grid-row-end:6 ;
+    grid-column-start: 11;
+    grid-column-end: 14;
+}
+
+article form{
+    grid-row-start:3 ;
     grid-row-end:6 ;
     grid-column-start: 11;
     grid-column-end: 14;
