--- a/Agra/public/tasks.css
+++ b/Agra/public/tasks.css
@@ -6,23 +6,18 @@ body{
     font-family: 'Fira Code', monospace;
 }
 
-.container{
+.container1{
     padding: 20px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     gap: 25px;
-    height: 79vh;
+    width: 100%;
+    height: 100%;
 }
 
-.container div{
-
-
-
-}
 
 .in-container1{
-    width: 50%;
+    width: 60%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -30,9 +25,11 @@ body{
 }
 
 .in-container2{
-    width: 50%;
+    width: 40%;
     height: 100%;
     display: flex;
+    justify-content: center;
+    text-align: center;
     gap: 25px;
 }
 
@@ -127,6 +124,7 @@ nav{
     margin-left: 30px;
 }
 
+
 .pb{
     text-align: center;
     padding: 6px;
@@ -163,10 +161,13 @@ a{
     }
 }
 
+.instrucContainer{
+    width: 100%;
+    height: 30%;
+}
 
 /*Instructions Teacher*/
 .instructions{
-    width: 40%;
     height: 100%;
     background-color: #004AA0;
     color: black;
@@ -178,7 +179,8 @@ a{
     grid-row-end: 7;
     grid-column-start: 1;
     grid-column-end: 4;
-    margin-left: 20px;
+    margin-left: auto;
+    margin-right: auto;
 
     display: grid;
     grid-template-rows: 35px repeat(6, 1fr);
@@ -188,14 +190,14 @@ a{
     padding: 10px;
     box-shadow: 3px 3px 3px 3px #001f42;
 }
+
+
 .instruc-container{
     width: 90%;
     font-size: 16px;
-    height: 100px;
     border: black solid 1px;
     margin: 10px auto;
     display: flex;
-
 
 }
 .instrucName{
@@ -251,15 +253,6 @@ a{
 }
 
 
-/*code-container*/
-.code-container{
-    border-radius: 20px;
-    grid-row-start: 2;
-    grid-row-end: 5;
-    grid-column-start: 4;
-    grid-column-end: 13;
-    padding: 0px;
-}
 
 .code-editor{
     border-radius: 20px;
@@ -292,7 +285,7 @@ a{
 #timer, #score{
     display: table;
     margin: 0 auto;
-    font-size: 55px;
+    font-size: 30px;
 }
 
 .startPanel{
