--- a/Agra/public/css/app.css
+++ b/Agra/public/css/app.css
@@ -828,9 +828,6 @@ select {
 .top-6 {
   top: 1.5rem;
 }
-.isolate {
-  isolation: isolate;
-}
 .z-0 {
   z-index: 0;
 }
@@ -905,6 +902,10 @@ select {
   margin-left: -1rem;
   margin-right: -1rem;
 }
+.-my-1 {
+  margin-top: -0.25rem;
+  margin-bottom: -0.25rem;
+}
 .mx-1 {
   margin-left: 0.25rem;
   margin-right: 0.25rem;
@@ -940,6 +941,9 @@ select {
 .-mb-4 {
   margin-bottom: -1rem;
 }
+.-me-2 {
+  margin-inline-end: -0.5rem;
+}
 .-ml-px {
   margin-left: -1px;
 }
@@ -964,6 +968,9 @@ select {
 .mb-6 {
   margin-bottom: 1.5rem;
 }
+.me-1 {
+  margin-inline-end: 0.25rem;
+}
 .me-4 {
   margin-inline-end: 1rem;
 }
@@ -984,9 +991,6 @@ select {
 }
 .ml-4 {
   margin-left: 1rem;
-}
-.ml-auto {
-  margin-left: auto;
 }
 .mr-2 {
   margin-right: 0.5rem;
@@ -1084,6 +1088,12 @@ select {
 .h-20 {
   height: 5rem;
 }
+.h-3 {
+  height: 0.75rem;
+}
+.h-3\.5 {
+  height: 0.875rem;
+}
 .h-32 {
   height: 8rem;
 }
@@ -1132,6 +1142,9 @@ select {
 .w-1\.5 {
   width: 0.375rem;
 }
+.w-1\/2 {
+  width: 50%;
+}
 .w-10 {
   width: 2.5rem;
 }
@@ -1144,11 +1157,14 @@ select {
 .w-20 {
   width: 5rem;
 }
+.w-3 {
+  width: 0.75rem;
+}
+.w-3\.5 {
+  width: 0.875rem;
+}
 .w-3\/4 {
   width: 75%;
-}
-.w-32 {
-  width: 8rem;
 }
 .w-4 {
   width: 1rem;
@@ -1195,6 +1211,15 @@ select {
 }
 .min-w-0 {
   min-width: 0px;
+}
+.min-w-\[theme\(spacing\.4\)\] {
+  min-width: 1rem;
+}
+.min-w-\[theme\(spacing\.5\)\] {
+  min-width: 1.25rem;
+}
+.min-w-\[theme\(spacing\.6\)\] {
+  min-width: 1.5rem;
 }
 .max-w-2xl {
   max-width: 42rem;
@@ -1272,6 +1297,9 @@ select {
   flex-shrink: 0;
 }
 .flex-grow {
+  flex-grow: 1;
+}
+.grow {
   flex-grow: 1;
 }
 .table-auto {
@@ -1376,6 +1404,12 @@ select {
      -moz-user-select: none;
           user-select: none;
 }
+.resize-none {
+  resize: none;
+}
+.resize {
+  resize: both;
+}
 .list-inside {
   list-style-position: inside;
 }
@@ -1395,11 +1429,17 @@ select {
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
+.grid-cols-7 {
+  grid-template-columns: repeat(7, minmax(0, 1fr));
+}
 .grid-cols-\[--cols-default\] {
   grid-template-columns: var(--cols-default);
 }
 .grid-cols-\[1fr_auto_1fr\] {
   grid-template-columns: 1fr auto 1fr;
+}
+.grid-cols-\[repeat\(7\2c minmax\(theme\(spacing\.7\)\2c 1fr\)\)\] {
+  grid-template-columns: repeat(7,minmax(1.75rem,1fr));
 }
 .grid-cols-\[repeat\(auto-fit\2c minmax\(0\2c 1fr\)\)\] {
   grid-template-columns: repeat(auto-fit,minmax(0,1fr));
@@ -1523,11 +1563,6 @@ select {
   margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
-.space-y-3 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
-}
 .space-y-6 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1548,9 +1583,6 @@ select {
 }
 .self-start {
   align-self: flex-start;
-}
-.self-stretch {
-  align-self: stretch;
 }
 .justify-self-start {
   justify-self: start;
@@ -1627,6 +1659,10 @@ select {
 .border {
   border-width: 1px;
 }
+.border-x-\[0\.5px\] {
+  border-left-width: 0.5px;
+  border-right-width: 0.5px;
+}
 .border-y {
   border-top-width: 1px;
   border-bottom-width: 1px;
@@ -1680,12 +1716,9 @@ select {
 .border-transparent {
   border-color: transparent;
 }
-.\!bg-gray-50 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity)) !important;
-}
-.bg-black\/50 {
-  background-color: rgb(0 0 0 / 0.5);
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 .bg-gray-100 {
   --tw-bg-opacity: 1;
@@ -1736,6 +1769,9 @@ select {
 .bg-white\/0 {
   background-color: rgb(255 255 255 / 0);
 }
+.bg-white\/5 {
+  background-color: rgb(255 255 255 / 0.05);
+}
 .bg-cover {
   background-size: cover;
 }
@@ -1771,9 +1807,21 @@ select {
 .p-6 {
   padding: 1.5rem;
 }
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+.px-0\.5 {
+  padding-left: 0.125rem;
+  padding-right: 0.125rem;
+}
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
+}
+.px-1\.5 {
+  padding-left: 0.375rem;
+  padding-right: 0.375rem;
 }
 .px-2 {
   padding-left: 0.5rem;
@@ -1798,6 +1846,14 @@ select {
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.py-0\.5 {
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
 }
 .py-1 {
   padding-top: 0.25rem;
@@ -1996,11 +2052,17 @@ select {
 .leading-7 {
   line-height: 1.75rem;
 }
+.leading-loose {
+  line-height: 2;
+}
 .leading-tight {
   line-height: 1.25;
 }
 .tracking-tight {
   letter-spacing: -0.025em;
+}
+.tracking-tighter {
+  letter-spacing: -0.05em;
 }
 .tracking-wider {
   letter-spacing: 0.05em;
@@ -2031,6 +2093,9 @@ select {
 .text-gray-700 {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+.text-gray-700\/50 {
+  color: rgb(55 65 81 / 0.5);
 }
 .text-gray-800 {
   --tw-text-opacity: 1;
@@ -2077,6 +2142,9 @@ select {
 .opacity-100 {
   opacity: 1;
 }
+.opacity-50 {
+  opacity: 0.5;
+}
 .opacity-70 {
   opacity: 0.7;
 }
@@ -2117,6 +2185,9 @@ select {
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
+.ring-inset {
+  --tw-ring-inset: inset;
+}
 .ring-black {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(0 0 0 / var(--tw-ring-opacity));
@@ -2125,8 +2196,8 @@ select {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(209 213 219 / var(--tw-ring-opacity));
 }
-.ring-gray-900\/10 {
-  --tw-ring-color: rgb(17 24 39 / 0.1);
+.ring-gray-600\/10 {
+  --tw-ring-color: rgb(75 85 99 / 0.1);
 }
 .ring-gray-950\/10 {
   --tw-ring-color: rgb(3 7 18 / 0.1);
@@ -2136,6 +2207,10 @@ select {
 }
 .ring-opacity-5 {
   --tw-ring-opacity: 0.05;
+}
+.blur {
+  --tw-blur: blur(8px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -2213,8 +2288,14 @@ select {
   content: var(--tw-content);
   width: 0.125rem;
 }
+.first\:border-s-0:first-child {
+  border-inline-start-width: 0px;
+}
 .first\:border-t-0:first-child {
   border-top-width: 0px;
+}
+.last\:border-e-0:last-child {
+  border-inline-end-width: 0px;
 }
 .first-of-type\:ps-1:first-of-type {
   padding-inline-start: 0.25rem;
@@ -2230,6 +2311,10 @@ select {
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+.hover\:bg-blue-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
 }
 .hover\:bg-gray-100:hover {
   --tw-bg-opacity: 1;
@@ -2261,6 +2346,9 @@ select {
 .hover\:text-gray-700:hover {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+.hover\:text-gray-700\/75:hover {
+  color: rgb(55 65 81 / 0.75);
 }
 .hover\:text-gray-800:hover {
   --tw-text-opacity: 1;
@@ -2350,6 +2438,9 @@ select {
 .focus\:ring-offset-2:focus {
   --tw-ring-offset-width: 2px;
 }
+.focus-visible\:z-10:focus-visible {
+  z-index: 10;
+}
 .focus-visible\:bg-gray-100:focus-visible {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -2362,18 +2453,13 @@ select {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
-.focus-visible\:ring-1:focus-visible {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+.focus-visible\:text-gray-700\/75:focus-visible {
+  color: rgb(55 65 81 / 0.75);
 }
 .focus-visible\:ring-2:focus-visible {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-.focus-visible\:ring-inset:focus-visible {
-  --tw-ring-inset: inset;
 }
 .focus-visible\:ring-gray-400\/40:focus-visible {
   --tw-ring-color: rgb(156 163 175 / 0.4);
@@ -2440,6 +2526,18 @@ select {
 .disabled\:checked\:text-gray-400:checked:disabled {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+.group\/item:first-child .group-first\/item\:rounded-s-lg {
+  border-start-start-radius: 0.5rem;
+  border-end-start-radius: 0.5rem;
+}
+.group\/item:last-child .group-last\/item\:rounded-e-lg {
+  border-start-end-radius: 0.5rem;
+  border-end-end-radius: 0.5rem;
+}
+.group\/button:hover .group-hover\/button\:text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 .group:hover .group-hover\:text-gray-500 {
   --tw-text-opacity: 1;
@@ -2656,10 +2754,6 @@ select {
     border-radius: 0.75rem;
   }
 
-  .sm\:p-10 {
-    padding: 2.5rem;
-  }
-
   .sm\:p-8 {
     padding: 2rem;
   }
@@ -2810,10 +2904,6 @@ select {
     border-radius: 0.75rem;
   }
 
-  .md\:p-20 {
-    padding: 5rem;
-  }
-
   .md\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -2865,14 +2955,6 @@ select {
     display: none;
   }
 
-  .lg\:h-full {
-    height: 100%;
-  }
-
-  .lg\:max-w-xs {
-    max-width: 20rem;
-  }
-
   .lg\:-translate-x-full {
     --tw-translate-x: -100%;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -2890,10 +2972,6 @@ select {
 
   .lg\:grid-cols-\[--cols-lg\] {
     grid-template-columns: var(--cols-lg);
-  }
-
-  .lg\:flex-row {
-    flex-direction: row;
   }
 
   .lg\:bg-transparent {
@@ -3096,14 +3174,13 @@ select {
     border-top-color: rgb(255 255 255 / 0.1);
   }
 
-  .dark\:\!bg-gray-700 {
-    --tw-bg-opacity: 1 !important;
-    background-color: rgb(55 65 81 / var(--tw-bg-opacity)) !important;
-  }
-
   .dark\:bg-gray-200 {
     --tw-bg-opacity: 1;
     background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+  }
+
+  .dark\:bg-gray-400\/10 {
+    background-color: rgb(156 163 175 / 0.1);
   }
 
   .dark\:bg-gray-500 {
@@ -3133,10 +3210,6 @@ select {
   .dark\:bg-gray-900 {
     --tw-bg-opacity: 1;
     background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-  }
-
-  .dark\:bg-gray-900\/30 {
-    background-color: rgb(17 24 39 / 0.3);
   }
 
   .dark\:bg-gray-950 {
@@ -3179,6 +3252,10 @@ select {
     color: rgb(209 213 219 / var(--tw-text-opacity));
   }
 
+  .dark\:text-gray-300\/50 {
+    color: rgb(209 213 219 / 0.5);
+  }
+
   .dark\:text-gray-400 {
     --tw-text-opacity: 1;
     color: rgb(156 163 175 / var(--tw-text-opacity));
@@ -3219,8 +3296,8 @@ select {
     color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 
-  .dark\:ring-gray-50\/10 {
-    --tw-ring-color: rgb(249 250 251 / 0.1);
+  .dark\:ring-gray-400\/20 {
+    --tw-ring-color: rgb(156 163 175 / 0.2);
   }
 
   .dark\:ring-gray-700 {
@@ -3292,6 +3369,10 @@ select {
   .dark\:hover\:text-gray-300:hover {
     --tw-text-opacity: 1;
     color: rgb(209 213 219 / var(--tw-text-opacity));
+  }
+
+  .dark\:hover\:text-gray-300\/75:hover {
+    color: rgb(209 213 219 / 0.75);
   }
 
   .dark\:hover\:text-gray-400:hover {
@@ -3381,6 +3462,10 @@ select {
     background-color: rgb(255 255 255 / 0.05);
   }
 
+  .dark\:focus-visible\:text-gray-300\/75:focus-visible {
+    color: rgb(209 213 219 / 0.75);
+  }
+
   .dark\:focus-visible\:text-gray-400:focus-visible {
     --tw-text-opacity: 1;
     color: rgb(156 163 175 / var(--tw-text-opacity));
@@ -3429,6 +3514,11 @@ select {
   .dark\:disabled\:checked\:bg-gray-600:checked:disabled {
     --tw-bg-opacity: 1;
     background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+  }
+
+  .group\/button:hover .dark\:group-hover\/button\:text-gray-400 {
+    --tw-text-opacity: 1;
+    color: rgb(156 163 175 / var(--tw-text-opacity));
   }
 
   .group:hover .dark\:group-hover\:text-gray-400 {
@@ -3508,9 +3598,6 @@ select {
 }
 .\[\&_\.choices\\_\\_inner\]\:ps-0 .choices__inner {
   padding-inline-start: 0px;
-}
-.\[\&_\.filepond--root\]\:font-sans .filepond--root {
-  font-family: Figtree, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 .\[\&_optgroup\]\:bg-white optgroup {
   --tw-bg-opacity: 1;
