--- a/Agra/public/course-lesson.css
+++ b/Agra/public/course-lesson.css
@@ -280,7 +280,7 @@ a.sidebar-link:hover {
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
-    background-color: #D3E4FA;
+    background-color: white;
     border-radius: 20px;
     width: 87%;
     height: 27%;
