--- a/Agra/public/course-new.css
+++ b/Agra/public/course-new.css
@@ -8,7 +8,7 @@ p{
 }
 h2{
     padding: 0;
-    margin: 1;
+    margin: 0;
 
 }
 
@@ -50,21 +50,15 @@ h2{
 .header-courses{
 
     width: 100%;
-    height: 7vh;
+    height: 10%;
     padding: 10px;
-
-
-}
-.header-courses h1{
-    font-size: calc(30px + 5px);
 }
 
 /* -------2 div---------- */
 .nav-outer-direction{
     width: 100%;
-    height: 5vh;
+    height: 8%;
     padding: 10px;
-    font-size: calc(8px + 5px);
 }
 .nav-inner-direction{
     border-radius: 10px;
@@ -86,9 +80,9 @@ h2{
 
 /* -------3 div---------- */
 .drpbtn-filter{
-    font-size: calc(10vw + 5px);
+
     width: 100%;
-    height: 10%;
+    height: 7%;
     padding: 10px;
     display: flex;
     align-items: center;
@@ -98,13 +92,10 @@ h2{
     background-color: #004bad00;
     color: #004AAD;
     border-radius: 10px;
-    width: 14%;
-    height: 50%;
+    width: 9%;
+    height: 100%;
     margin-left: 10px;
-    font-size: calc(.6vw + 5px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    font-size: calc(8px + 10px);;
 }
 #drpbtn:hover {
     background-color: #004AAD;
@@ -121,58 +112,47 @@ h2{
     display: flex;
     align-items: center;
     column-gap: 10px;
-    font-size: calc(10px + 5px);
-}
-.lbl-filter h2{
-    font-size: calc(15px + 5px);
 }
 
 /* -------5 div---------- */
 .content-subj{
-    font-size: calc(.5vw + 10px);
+    font-size: calc(.3vw + .2vw);
     font-weight: 300;
     width: 100%;
-    height: 80vh;
+    height: 67%;
     padding: 10px;
-    padding: 10px 20px 10px 20px;
+    padding: 10px 80px 10px 80px;
     display: flex;
     row-gap: 20px;
-
     flex-wrap: wrap;
     justify-content: space-evenly;
     overflow: auto;
     transition: background-color 0.3s, color 0.3s;
 }
 .box-subj{
-
+    border: 1px solid #ccc;
     width: 45%;
     height: 45%;
     background-color: #FFFFFF;
     border-radius: 10px;
-    padding: 20px;
+    padding: 10px;
     color: #004AAD;
 }
 .img-holder{
     width: 100%;
-    height: 65%;
-    display: flex;
-    justify-items: center;
-    align-content: center;
-
-}
-.img-holder-inner{
-    width: 100%;
-    height: 80%;
-    display: flex;
+    height: 60%;
 }
 #img-hold{
     width: 100%;
-    height: 100%;
-    margin:auto;
-    border-radius: 10px;
+    height: 90%;
+    position: relative;
+    background-size: cover; /* Cover the entire container */
+    background-position: center;
 }
 .lbl-btn{
     display: flex;
+    justify-content: center;
+    align-items: center;
     overflow: auto;
 }
 .lbl-sbj{
@@ -182,7 +162,7 @@ h2{
     margin: 0;
 }
 .lbl-sbj h3{
-    font-size: calc(1vw + .5rem);
+    font-size: calc(.8vw + .3vw);
     font-weight: 300;
 }
 .lbl-box{
@@ -241,30 +221,24 @@ h2{
 
 /* -------2 div---------- */
 .agenda-panel{
-    font-size: calc(.6vw + 5px);
+
     background-color: #FFFFFF;
     border-radius: 10px;
     width: 100%;
-    height: 30%;
+    height: 45%;
     padding: 10px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    row-gap: 10px;
     flex-wrap: wrap;
-
-
 
 }
 .lbl-agenda{
-    font-size: calc(.5vw + 7px);
     width: 100%;
     height: 10%;
     display: flex;
     justify-content: space-between;
 }
-.lbl-agenda h4{
-    font-size: calc(1vw + 10px);
-}
-/*
 .container-now{
     width: 100%;
     height: 5vh;
@@ -290,7 +264,14 @@ h2{
     justify-content: start;
     align-items: center;
     column-gap: 10px;
-}*/
+}
+.container-tomorrow{
+    width: 100%;
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+    color: #706F6F;
+}
 .box-tom{
     width: 100%;
     height: 100%;
@@ -301,8 +282,6 @@ h2{
     justify-content: space-around;
     column-gap: 10px;
     padding: 10px;
-    margin-top: 10px;
-
 }
 .box-tom-inner{
     display: flex;
@@ -310,13 +289,6 @@ h2{
     align-items: center;
     column-gap: 10px;
 }
-.box-tom:hover{
-    background-color:#004AAD ;
-    color: #ffffff;
-    transform: scale(1.05);
-    box-shadow: 0 0 20px rgba(0, 74, 173, 0.5);
-}
-/*
 .container-otherDay{
     width: 100%;
     height: 30%;
@@ -325,7 +297,7 @@ h2{
     color: #706F6F;
 
 }
-.box-oday{
+.box-today{
     width: 100%;
     height: 100%;
     border-radius: 10px;
@@ -337,14 +309,12 @@ h2{
     column-gap: 10px;
     padding: 10px;
 }
-.box-oday-inner{
+.box-today-inner{
     display: flex;
     justify-content: start;
     align-items: center;
     column-gap: 10px;
 }
-
- */
 
 /* -------3 div---------- */
 
@@ -354,86 +324,21 @@ h2{
     background-color: #FFFFFF;
     border-radius: 10px;
     width: 100%;
-    height: 45%;
+    height: 45vh;
     padding: 10px;
     box-sizing: border-box;
 }
-.lbl-title{
-    font-size: calc(.5vw + 7px);
-    display: flex;
-    justify-content: space-between;
-    height: 12%;
-    width: 100%;
-}
-.lbl-title h3{
-    font-size: calc(1vw + 10px);
-}
-.calendar {
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px;
-    width: 100%;
-    height: 88%;
-    overflow: auto;
-}
 
-.calendar-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 10px;
-}
-
-.calendar-body {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    gap: 5px;
-}
-
-.calendar-cell {
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 5px;
-    text-align: center;
-    width: 100%;
-    height: 100%;
-}
-.week-header {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    gap: 5px;
-    font-weight: bold;
-}
-
-.week-cell {
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 5px;
-    text-align: center;
-}
-.calendar-cell.today {
-    background-color: #004AAD;
-    color: #FFFFFF;
-}
-
-
-@media screen and (max-width: 1400px) {
+@media screen and (max-width: 1300px) {
     .second-main {
         display: flex;
         flex-direction: column;
-        justify-content: start;
-
     }
     .left-panel{
         width: 100%;
-        height: 50%;
-        display: flex;
-        flex-direction: column;
     }
     .right-panel{
         width: 100% ;
-        height: 50%;
-
     }
     .student-profile, .student-profile-inner{
         display: none;
@@ -443,39 +348,15 @@ h2{
         flex-wrap: wrap;
         flex-direction: row;
 
-        width: 100%;
-        height: 100%;
-        column-gap: 50px;
     }
     .box-subj{
         width: 100%;
-        height: 50%;
+        height: 45%;
         background-color: #FFFFFF;
         border-radius: 10px;
-        display: flex;
-        flex-direction: column;
-        padding: 20px;
+        padding: 10px;
         color: #004AAD;
     }
 
-    .image-holder, .image-holder-inner{
-        display: none;
-    }
-    #img-hold{
-        display: none;
-    }
-    .lbl-btn{
-        display: flex;
-        height: 100%;
-    }
-    #drpbtn{
-        height: 100%;
 
-    }
-    .drpbtn-filter h5{
-        font-size: calc(8px + 7px);
-    }
-
-
-
-}
+  }
