flowbite instead of daisy

--- a/Agra/public/app.css
+++ b/Agra/public/app.css
@@ -1,383 +1,3 @@
-/* Importing Google Font */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
-
-/* Resetting box model */
-::after,
-::before {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-/* Removing default link underline */
-a {
-    text-decoration: none;
-}
-
-/* Removing default list styling */
-li {
-    list-style: none;
-}
-
-/* Styling for heading */
-h1 {
-    font-weight: 600;
-    font-size: 1.5rem;
-}
-
-/* Setting font family for the whole body */
-body {
-    font-family: 'Poppins', sans-serif;
-
-}
-
-/* Wrapper for sidebar and main content */
-.wrapper {
-    display: flex;
-}
-
-/* Main content */
-.main {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    padding-right: 1rem;
-
-    min-height: 100vh;
-    width: 100%;
-    overflow: hidden;
-    transition: all 0.35s ease-in-out;
-    background-color: #004AAD;
-}
-.second-main{
-    border-radius: 20px;
-    background-color: #FFFFFF;
-    height: 100%;
-    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5); /* Inset box shadow */
-
-}
-
-/* Sidebar container */
-#sidebar {
-    width: 15%;
-    min-width: 70px;
-    z-index: 1000;
-    transition: all .25s ease-in-out;
-    background-color: #004AAD;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-
-}
-
-.sidebar-link{
-    font-size: 20px;
-}
-
-/* Toggle button styling */
-.toggle-btn {
-    background-color: transparent;
-    cursor: pointer;
-    border: 0;
-    padding: 1rem 1.5rem;
-}
-
-/* Styling for toggle button icon */
-.toggle-btn i {
-    font-size: 1.5rem;
-    color: #FFF;
-}
-
-/* Sidebar logo styling */
-.sidebar-logo {
-    margin: auto 0;
-}
-
-/* Styling for sidebar logo link */
-.sidebar-logo a {
-    color: #FFF;
-    font-size: 1.15rem;
-    font-weight: 600;
-}
-
-/* Hide sidebar logo and link text when sidebar is collapsed */
-#sidebar:not(.expand) .sidebar-logo,
-#sidebar:not(.expand) a.sidebar-link span {
-    display: none;
-}
-
-/* Styling for sidebar navigation */
-.sidebar-nav {
-    padding: 2rem 0;
-    flex: 1 1 auto;
-}
-
-/* Styling for sidebar links */
-a.sidebar-link {
-    padding: .625rem 1.625rem;
-    color: #FFF;
-    display: block;
-    font-size: 0.9rem;
-    white-space: nowrap;
-    border-left: 3px solid transparent;
-}
-
-/* Styling for icons in sidebar links */
-.sidebar-link i {
-    font-size: 1rem;
-    margin-right: 2rem;
-    margin-left: 1rem;
-}
-
-/* Hover effect for sidebar links */
-a.sidebar-link:hover {
-    color: #004AAD;
-    background-color: #FFFFFF;
-    border-left: 20px solid #004AAD;
-    transition: all 0.6s ease 0s;
-
-}
-
-
-.line{
-    border: solid #ffffff 1px;
-    height: 0px;
-    width: 100%;
-}
-.search-b{
-    width: 20rem;
-    margin: 40px;
-    box-shadow: inset black 2px;
-}
-.second-main{
-    display: flex;
-    justify-content: flex-end;
-}
-.middle-bar{
-    display: flex;
-
-    width: 65%;
-    height: 100%;
-    flex-direction: column;
-
-
-}
-.right-bar{
-    display: flex;
-    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5); /* Inset box shadow */
-    background-color: #D3E4FA;
-    width: 35%;
-    height: 100%;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    row-gap:2rem;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-
-}
-.student-name {
-    width: 100%;
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-    padding: 10px;
-}
-.name{
-    text-align: right;
-}
-.task-box{
-    overflow: auto;
-    border-radius: 20px;
-    width: 90%;
-    height: 40%;
-    background-color: #FFFFFF;
-}
-.calendar-box{
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    border-radius: 20px;
-    width: 90%;
-    height: 35%;
-    background-color: #FFFFFF;
-    font-size: 20px;
-    padding: 20px;
-}
-.calendar-btn{
-    border: 0px;
-}
-.calendar-btn:hover{
-    background-color: #004AAD;
-    color: white;
-    transform: scale(1.05);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-}
-.header {
-    margin-top: 1rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 10px;
-}
-.days {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    gap: 5px;
-}
-.day {
-    text-align: center;
-    padding: 5px;
-
-}
-.analytics-box{
-
-    border-radius: 20px;
-    width: 90%;
-    height: 40%;
-    background-color: #FFFFFF;
-}
-.navigations-middle-bar{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-.courses-div{
-    display: flex;
-
-    width: 100%;
-    height: 75.9vh;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    row-gap: 1px;
-    overflow: auto;
-
-}
-.courses-box{
-    display: flex;
-    justify-content: space-between;
-    margin-top:20px;
-    background-color: #D3E4FA;
-    border-radius: 20px;
-    width: 87%;
-    height: 25%;
-    transition: all 0.3s ease;
-}
-.courses-box:hover {
-    background-color: #004AAD;
-    color: white;
-    transform: scale(1.05);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-}
-.course-inner-box{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-content: center;
-}
-.btn-start-course{
-    align-self: flex-end;
-
-}
-.btn{
-    background-color: #004AAD;
-}
-.btn:hover{
-    background-color: #FFFFFF;
-    color: #004AAD;
-    transform: scale(1.05);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-}
-.navigations-middle-filter{
-    display: flex;
-}
-
-.course-h1-name{
-    margin: 30px;
-    font-size: 10rem;
-}
-.course-h1{
-    font-size: 3rem;
-    color: #004AAD;
-}
-.image-container{
-
-}
-.student-name {
-    width: 100%;
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-
-}
-.name{
-    text-align: right;
-}
-/* Styling for student information */
-.student-info {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: flex-end;
-    width: 100%;
-}
-
-.task-box{
-    display: flex;
-    flex-direction: column;
-    height: 40%;
-    font-size: 20px;
-}
-.title{
-    display: flex;
-    flex-direction: row;
-    align-items: end;
-    width: 5rem;
-}
-.time-subject{
-
-    width: 100%;
-    height: 35%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-.subject-comprog{
-    width: 70%;
-    height: 80%;
-    border-radius: 20px;
-    background-color: #004AAD;
-    color: #ffffff;
-    display: flex;
-    align-content: center;
-    flex-direction: column;
-    padding: 10px;
-    margin-bottom: 5px;
-}
-.subject-comprog:hover{
-    transform: scale(1.05);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-}
-.subject-comprog-1{
-    width: 70%;
-    height: 80%;
-    border-radius: 20px;
-    background-color: #D3E4FA;
-    color: #000000;
-    display: flex;
-    align-content: center;
-    flex-direction: column;
-    padding: 10px;
-
-}
-.subject-comprog-1:hover{
-    transform: scale(1.05);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-}
-.line{
-    border: 1px solid #706F6F;
-    width: 85%;
-    height: 0%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
