--- a/Agra/public/css/app.css
+++ b/Agra/public/css/app.css
@@ -888,6 +888,22 @@ video {
   height: 30rem;
 }.h-full {
   height: 100%;
+}.h-\[42rem\] {
+  height: 42rem;
+}.max-h-96 {
+  max-height: 24rem;
+}.max-h-\[1000px\] {
+  max-height: 1000px;
+}.max-h-\[100vh\] {
+  max-height: 100vh;
+}.max-h-\[900vh\] {
+  max-height: 900vh;
+}.max-h-\[90vh\] {
+  max-height: 90vh;
+}.max-h-\[92vh\] {
+  max-height: 92vh;
+}.max-h-\[91vh\] {
+  max-height: 91vh;
 }.min-h-full {
   min-height: 100%;
 }.min-h-screen {
@@ -1034,6 +1050,8 @@ video {
   gap: 2rem;
 }.gap-y-10 {
   row-gap: 2.5rem;
+}.gap-y-4 {
+  row-gap: 1rem;
 }.space-x-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
@@ -1193,14 +1211,23 @@ video {
   background-color: rgb(195 221 253 / var(--tw-bg-opacity));
 }.bg-transparent {
   background-color: transparent;
+}.bg-gray-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }.bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }.from-sky-500 {
   --tw-gradient-from: #0ea5e9 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(14 165 233 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}.from-blue-700 {
+  --tw-gradient-from: #1A56DB var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(26 86 219 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }.to-indigo-500 {
   --tw-gradient-to: #6875F5 var(--tw-gradient-to-position);
+}.to-blue-500 {
+  --tw-gradient-to: #3F83F8 var(--tw-gradient-to-position);
 }.fill-current {
   fill: currentColor;
 }.stroke-current {
@@ -1288,6 +1315,8 @@ video {
   padding-left: 1.75rem;
 }.pr-7 {
   padding-right: 1.75rem;
+}.pl-2 {
+  padding-left: 0.5rem;
 }.text-left {
   text-align: left;
 }.text-center {
@@ -1395,6 +1424,9 @@ video {
 }.text-blue-800 {
   --tw-text-opacity: 1;
   color: rgb(30 66 159 / var(--tw-text-opacity));
+}.text-blue-400 {
+  --tw-text-opacity: 1;
+  color: rgb(118 169 250 / var(--tw-text-opacity));
 }.underline {
   text-decoration-line: underline;
 }.antialiased {
@@ -1954,6 +1986,10 @@ video {
 
   .md\:w-72 {
     width: 18rem;
+  }
+
+  .md\:w-\[900px\] {
+    width: 900px;
   }
 
   .md\:max-w-xl {
