--- a/Agra/public/tasks.css
+++ b/Agra/public/tasks.css
@@ -217,7 +217,6 @@ a{
 /*Progress Div*/
 .coding-area{
     width: 100%;
-    height: 100%;
     background-color: #004AA0;
     border-radius: 20px;
     box-shadow: inset 3px 3px 3px 3px #001f42;
@@ -225,8 +224,8 @@ a{
 /*Mini-game*/
 
 .mini-game canvas{
-    width:60%;
-    height: 100%;
+    width:100%;
+    height: 39.4rem;
     background-color: #004AA0;
     border-radius: 20px;
     box-shadow: 5px 5px 5px 5px #001f42;
