--- a/Agra/public/css/app.css
+++ b/Agra/public/css/app.css
@@ -996,6 +996,8 @@ video {
   height: 0.75rem;
 }.h-3\.5 {
   height: 0.875rem;
+}.h-3\/6 {
+  height: 50%;
 }.h-32 {
   height: 8rem;
 }.h-4 {
@@ -1018,6 +1020,8 @@ video {
   height: 24rem;
 }.h-\[100dvh\] {
   height: 100dvh;
+}.h-\[30rem\] {
+  height: 30rem;
 }.h-\[40rem\] {
   height: 40rem;
 }.h-\[50rem\] {
@@ -1030,22 +1034,38 @@ video {
   height: 100%;
 }.h-screen {
   height: 100vh;
-}.h-3\/6 {
-  height: 50%;
-}.h-\[300px\] {
-  height: 300px;
-}.max-h-96 {
-  max-height: 24rem;
+}.h-svh {
+  height: 100svh;
+}.h-\[\] {
+  height: ;
+}.h-\[3rem\] {
+  height: 3rem;
+}.h-\[1000rem\] {
+  height: 1000rem;
+}.h-\[70rem\] {
+  height: 70rem;
+}.h-\[30rem\[\]\] {
+  height: 30rem[];
+}.h-\[60rem\] {
+  height: 60rem;
+}.h-\[500rem\] {
+  height: 500rem;
+}.h-\[550rem\] {
+  height: 550rem;
+}.h-\[55rem\] {
+  height: 55rem;
+}.h-\[90rem\] {
+  height: 90rem;
+}.h-\[80rem\] {
+  height: 80rem;
 }.max-h-72 {
   max-height: 18rem;
-}.max-h-32 {
-  max-height: 8rem;
-}.max-h-2 {
-  max-height: 0.5rem;
 }.min-h-full {
   min-height: 100%;
 }.min-h-screen {
   min-height: 100vh;
+}.min-h-10 {
+  min-height: 2.5rem;
 }.w-1 {
   width: 0.25rem;
 }.w-1\.5 {
@@ -1064,6 +1084,8 @@ video {
   width: 0.5rem;
 }.w-2\.5 {
   width: 0.625rem;
+}.w-2\/4 {
+  width: 50%;
 }.w-20 {
   width: 5rem;
 }.w-3 {
@@ -1324,6 +1346,8 @@ video {
   justify-content: center;
 }.justify-between {
   justify-content: space-between;
+}.justify-around {
+  justify-content: space-around;
 }.justify-items-center {
   justify-items: center;
 }.gap-1 {
@@ -1552,6 +1576,9 @@ video {
 }.bg-blue-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(225 239 254 / var(--tw-bg-opacity));
+}.bg-blue-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(195 221 253 / var(--tw-bg-opacity));
 }.bg-blue-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(164 202 254 / var(--tw-bg-opacity));
@@ -1621,10 +1648,16 @@ video {
   --tw-gradient-from: #1E429F var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(30 66 159 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}.from-sky-500 {
+  --tw-gradient-from: #0ea5e9 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(14 165 233 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }.to-blue-600 {
   --tw-gradient-to: #1C64F2 var(--tw-gradient-to-position);
 }.to-gray-300 {
   --tw-gradient-to: #D1D5DB var(--tw-gradient-to-position);
+}.to-indigo-500 {
+  --tw-gradient-to: #6875F5 var(--tw-gradient-to-position);
 }.bg-cover {
   background-size: cover;
 }.bg-clip-text {
@@ -1752,6 +1785,8 @@ video {
   padding-inline-end: 1.5rem;
 }.pe-8 {
   padding-inline-end: 2rem;
+}.pl-11 {
+  padding-left: 2.75rem;
 }.pl-2 {
   padding-left: 0.5rem;
 }.pl-5 {
@@ -1817,6 +1852,9 @@ video {
 }.text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
+}.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }.text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1943,6 +1981,8 @@ video {
   opacity: 0;
 }.opacity-100 {
   opacity: 1;
+}.opacity-20 {
+  opacity: 0.2;
 }.opacity-50 {
   opacity: 0.5;
 }.opacity-70 {
@@ -2128,6 +2168,9 @@ video {
 }.hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}.hover\:bg-gray-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
 }.hover\:bg-gray-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
@@ -2342,12 +2385,12 @@ video {
 }.group:hover .group-hover\:text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
-}.group:hover .group-hover\:text-gray-700 {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
 }.group:hover .group-hover\:text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
+}.group:hover .group-hover\:text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }.group\/item:hover .group-hover\/item\:underline {
   text-decoration-line: underline;
 }.group\/link:hover .group-hover\/link\:underline {
@@ -2652,23 +2695,23 @@ video {
 }.group\/button:hover .dark\:group-hover\/button\:text-gray-400:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
-}.group:hover .dark\:group-hover\:text-gray-200:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
 }.group:hover .dark\:group-hover\:text-gray-400:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }.group:hover .dark\:group-hover\:text-white:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}.group:focus .dark\:group-focus\:ring-gray-800\/70:is(.dark *) {
-  --tw-ring-color: rgb(31 41 55 / 0.7);
-}.group:focus-visible .dark\:group-focus-visible\:text-gray-200:is(.dark *) {
+}.group:hover .dark\:group-hover\:text-gray-200:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
+}.group:focus .dark\:group-focus\:ring-gray-800\/70:is(.dark *) {
+  --tw-ring-color: rgb(31 41 55 / 0.7);
 }.group:focus-visible .dark\:group-focus-visible\:text-gray-400:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}.group:focus-visible .dark\:group-focus-visible\:text-gray-200:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
 }@media not all and (min-width: 1280px) {
 
   .max-xl\:hidden {
@@ -3017,6 +3060,10 @@ video {
     width: 900px;
   }
 
+  .md\:max-w-4xl {
+    max-width: 56rem;
+  }
+
   .md\:columns-\[--cols-md\] {
     -moz-columns: var(--cols-md);
          columns: var(--cols-md);
@@ -3058,6 +3105,11 @@ video {
 
   .md\:rounded-xl {
     border-radius: 0.75rem;
+  }
+
+  .md\:rounded-s-lg {
+    border-start-start-radius: 0.5rem;
+    border-end-start-radius: 0.5rem;
   }
 
   .md\:p-20 {
@@ -3323,6 +3375,8 @@ video {
   flex-direction: row-reverse;
 }.rtl\:space-x-reverse:where([dir="rtl"], [dir="rtl"] *) > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 1;
+}.rtl\:text-right:where([dir="rtl"], [dir="rtl"] *) {
+  text-align: right;
 }@media (min-width: 1024px) {
 
   .rtl\:lg\:-translate-x-0:where([dir="rtl"], [dir="rtl"] *) {
