--- a/Agra/public/css/app.css
+++ b/Agra/public/css/app.css
@@ -1064,6 +1064,8 @@ video {
   min-height: 100%;
 }.min-h-screen {
   min-height: 100vh;
+}.min-h-\[theme\(spacing\.48\)\] {
+  min-height: 12rem;
 }.w-1 {
   width: 0.25rem;
 }.w-1\.5 {
@@ -1135,6 +1137,8 @@ video {
   min-width: 1.25rem;
 }.min-w-\[theme\(spacing\.6\)\] {
   min-width: 1.5rem;
+}.min-w-\[theme\(spacing\.8\)\] {
+  min-width: 2rem;
 }.max-w-2xl {
   max-width: 42rem;
 }.max-w-3xl {
@@ -1182,6 +1186,8 @@ video {
   max-width: 36rem;
 }.max-w-xs {
   max-width: 20rem;
+}.max-w-none {
+  max-width: none;
 }.flex-1 {
   flex: 1 1 0%;
 }.flex-shrink {
@@ -1550,6 +1556,8 @@ video {
   border-top-width: 1px;
 }.border-none {
   border-style: none;
+}.\!border-none {
+  border-style: none !important;
 }.border-blue-600 {
   --tw-border-opacity: 1;
   border-color: rgb(28 100 242 / var(--tw-border-opacity));
@@ -1890,6 +1898,8 @@ video {
   font-weight: 100;
 }.uppercase {
   text-transform: uppercase;
+}.italic {
+  font-style: italic;
 }.leading-5 {
   line-height: 1.25rem;
 }.leading-6 {
@@ -2308,6 +2318,9 @@ video {
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }.focus-visible\:text-gray-700\/75:focus-visible {
   color: rgb(55 65 81 / 0.75);
+}.focus-visible\:outline-none:focus-visible {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }.focus-visible\:ring-1:focus-visible {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
@@ -2488,6 +2501,8 @@ video {
 }.dark\:bg-green-600:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(5 122 85 / var(--tw-bg-opacity));
+}.dark\:fill-current:is(.dark *) {
+  fill: currentColor;
 }.dark\:text-blue-300:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(164 202 254 / var(--tw-text-opacity));
@@ -3379,6 +3394,11 @@ video {
     --tw-translate-x: 100%;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
+}.\[\&\.trix-active\]\:bg-gray-50.trix-active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}.dark\:\[\&\.trix-active\]\:bg-white\/5.trix-active:is(.dark *) {
+  background-color: rgb(255 255 255 / 0.05);
 }.\[\&\:\:-ms-reveal\]\:hidden::-ms-reveal {
   display: none;
 }.\[\&\:not\(\:first-of-type\)\]\:border-s:not(:first-of-type) {
