--- a/Agra/public/css/app.css
+++ b/Agra/public/css/app.css
@@ -953,6 +953,24 @@ video {
   margin-top: 1.25rem;
 }.mr-5 {
   margin-right: 1.25rem;
+}.ml-5 {
+  margin-left: 1.25rem;
+}.ml-7 {
+  margin-left: 1.75rem;
+}.ml-8 {
+  margin-left: 2rem;
+}.ml-\[30px\] {
+  margin-left: 30px;
+}.ml-\[50px\] {
+  margin-left: 50px;
+}.ml-\[100px\] {
+  margin-left: 100px;
+}.ml-\[200px\] {
+  margin-left: 200px;
+}.ml-\[300px\] {
+  margin-left: 300px;
+}.ml-\[230px\] {
+  margin-left: 230px;
 }.line-clamp-\[--line-clamp\] {
   overflow: hidden;
   display: -webkit-box;
@@ -1139,6 +1157,8 @@ video {
   min-width: 1.5rem;
 }.min-w-\[theme\(spacing\.8\)\] {
   min-width: 2rem;
+}.min-w-full {
+  min-width: 100%;
 }.max-w-2xl {
   max-width: 42rem;
 }.max-w-3xl {
@@ -1657,6 +1677,12 @@ video {
 }.bg-green-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(14 159 110 / var(--tw-bg-opacity));
+}.bg-green-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(222 247 236 / var(--tw-bg-opacity));
+}.bg-yellow-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 246 178 / var(--tw-bg-opacity));
 }.bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }.from-blue-400 {
@@ -1984,6 +2010,12 @@ video {
 }.text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}.text-green-800 {
+  --tw-text-opacity: 1;
+  color: rgb(3 84 63 / var(--tw-text-opacity));
+}.text-yellow-800 {
+  --tw-text-opacity: 1;
+  color: rgb(114 59 19 / var(--tw-text-opacity));
 }.underline {
   text-decoration-line: underline;
 }.antialiased {
